--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/api_mediciner
 spring.datasource.username=carlao
 spring.datasource.password=123321
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
