--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=carlao
 spring.datasource.password=123321
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
